--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#000000</color>
+<!--    <color name="colorPrimary">#3F51B5</color>-->
+    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorAccent">#FF4081</color>
     <color name="white">#ffffff</color> <!-- 白色 -->
-    <color name="blue">#2196F3</color> <!-- 蓝色 -->
+    <color name="gray">#808080</color> <!-- 灰色 -->
+    <color name="blue">#5ecbd7</color> <!-- 蓝色 -->
+    <color name="red">#FF3300</color>
+    <color name="green">#C1089508</color> <!-- 绿色-->
+
+
+    <!--通知栏和标题颜色-->
+    <color name="color_title">#ff7700</color>
+
+    <!--首页tab未点击-->
+
+    <!--1dp的线条的颜色-->
+    <color name="transparent">#00000000</color>
+
+    <!--各种黑色-->
+    <color name="result_view">#b0000000</color>
+    <color name="viewfinder_mask">#60000000</color>
+    <color name="possible_result_points">#c0ffff00</color>
+    <color name="black">#000000</color>
+
+    <!--Zxing-->
+    <!-- Android standard ICS color -->
+    <color name="status_text">#ffffffff</color>
+    <color name="viewfinder_laser">#ffcc0000</color> <!-- Android standard ICS color -->
+
+    <!--Setting-->
+    <color name="white_bg">#FFFFFF</color>
+    <color name="dark_gray_bg">#F5F5F5</color>
+    <color name="light_gray_bg">#EDEDED</color>
+    <color name="divider">#DCDCDC</color>
     <color name="primary_text">#424242</color>
+    <color name="secondary_text">#9e9e9e</color>
+
+    <!--address-->
+    <color name="blue_text">#3599E8</color>
+
+    <!--update_address-->
+    <color name="primary">#3F51B5</color>
+    <color name="primary_dark">#303F9F</color>
+
+    <!--login-->
+
+    <color name="orange">#FF9800</color>
 </resources>
