--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,6 +5,19 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <!--Setting-->
+    <dimen name="divider_size">1px</dimen>
     <dimen name="spacing_micro">4dp</dimen>
     <dimen name="spacing_minor">10dp</dimen>
+    <dimen name="spacing_major">12dp</dimen>
+    <dimen name="font_large">18sp</dimen>
+    <dimen name="font_normal">15sp</dimen>
+    <dimen name="font_small">13sp</dimen>
+    <dimen name="font_smaller">12sp</dimen>
+    <dimen name="cell_larger">80dp</dimen>
+    <dimen name="cell_normal">45dp</dimen>
+    <dimen name="section_height">48dp</dimen>
+    <dimen name="stroke">1.0px</dimen>
+    <dimen name="corner_radius">4.0px</dimen>
 </resources>
