--- a/app/src/main/res/layout/food_item.xml
+++ b/app/src/main/res/layout/food_item.xml
@@ -1,41 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="150dp"
+    android:layout_marginBottom="8dp"
+    app:layout_constraintBottom_toBottomOf="parent">
 
-    <FrameLayout
+    <ImageView
+        android:id="@+id/food_picture"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="parent">
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/logo" />
 
-        <ImageButton
-            android:id="@+id/food_picture"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/logo" />
+    <com.what2e.eatwhat.widget.ShoppingCountView
+        android:id="@+id/add_shopping_trolley"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:scv_add_btn_bg_color="?attr/colorPrimary"
+        app:scv_add_btn_text_color="@color/white"
+        app:scv_minus_btn_bg_color="@color/white"
+        app:scv_minus_btn_text_color="?attr/colorPrimary" />
 
-        <com.what2e.eatwhat.widget.ShoppingCountView
-            android:id="@+id/add_shopping_trolley"
-            android:layout_width="38dp"
-            android:layout_height="match_parent"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_gravity="right|bottom"
-            android:visibility="visible"
-            app:scv_add_btn_bg_color="?attr/colorPrimary"
-            app:scv_add_btn_text_color="@color/white"
-            app:scv_minus_btn_bg_color="@color/white"
-            app:scv_minus_btn_text_color="?attr/colorPrimary" />
+    <ImageView
+        android:id="@+id/time_tips"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/food_picture"
+        app:layout_constraintTop_toTopOf="@id/food_picture"
+        app:srcCompat="@android:drawable/ic_menu_more" />
 
-        <ImageView
-            android:id="@+id/time_tips"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@android:drawable/ic_menu_more" />
-    </FrameLayout>
+    <TextView
+        android:id="@+id/tv_time_tips"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="3dp"
+        android:text="早餐"
+        android:textColor="@color/black"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/time_tips" />
+
+    <TextView
+        android:id="@+id/name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="2dp"
+        android:layout_marginStart="3dp"
+        android:background="#55000000"
+        android:padding="2dp"
+        android:text="名称"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
